--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: openerp
 Section: net
 Priority: optional
-Maintainer: OpenERP SA <al@openerp.com>
+Maintainer: Zaber Technologies <donkirkby+launpd@gmail.com>
 Build-Depends: debhelper (>= 7.0.50~), python, rsync
 Standards-Version: 3.9.1
 Homepage: http://www.openerp.com/
