--- a/debian/control
+++ b/debian/control
@@ -2,7 +2,7 @@ Source: openerp
 Section: net
 Priority: optional
 Maintainer: Zaber Technologies <donkirkby+launpd@gmail.com>
-Build-Depends: debhelper (>= 7.0.50~), python, rsync
+Build-Depends: debhelper (>= 7.0.50~), python, rsync, python-setuptools
 Standards-Version: 3.9.1
 Homepage: http://www.openerp.com/
 Vcs-Bzr: https://launchpad.net/openobject
